Bug 125799 - UI: Dialog Options > Writer > Compatibility too low to show option checkbox under Global compatibility options (gtk, gtk3, kde5)
Summary: UI: Dialog Options > Writer > Compatibility too low to show option checkbox u...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
6.4.0.0.alpha1+
Hardware: All Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.3.0.1 target:6.4.0
Keywords: bibisected, bisected
Depends on:
Blocks: Options-Dialog-Writer
  Show dependency treegraph
 
Reported: 2019-06-08 13:07 UTC by Cor Nouws
Modified: 2019-06-12 12:18 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
screenprint of dlg (113.05 KB, image/png)
2019-06-08 13:07 UTC, Cor Nouws
Details
no issue on Windows builds of master (37.84 KB, image/png)
2019-06-08 14:17 UTC, V Stuart Foote
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Cor Nouws 2019-06-08 13:07:27 UTC
Created attachment 152047 [details]
screenprint of dlg

Open Dialog Options > Writer > Compatibility
Se the Global compatibility options at the bottom
  > the dlg is too low to show option checkbox

see attachment 

Version: 6.3.0.0.alpha1+
Build ID: 77ae0abe21f672cf4b7d2e069f1d40d20edc49a7
CPU threads: 4; OS: Linux 5.0; UI render: default; VCL: gtk3; 
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2019-05-31_15:33:33
Locale: nl-NL (nl_NL.UTF-8); UI-Language: en-US
Calc: threaded
Comment 1 V Stuart Foote 2019-06-08 14:17:39 UTC
Created attachment 152049 [details]
no issue on Windows builds of master

Can not confirm on Windows builds
Version: 6.4.0.0.alpha0+ (x86)
Build ID: 9870ff897f088563426bee9567dd9cb722c2b929
CPU threads: 4; OS: Windows 10.0; UI render: GL; VCL: win; 
Locale: en-US (en_US); UI-Language: en-US
Calc: threaded
Comment 2 Julien Nabet 2019-06-08 15:25:54 UTC
On pc Debian x86-64 with master sources updated today + gtk3, I could reproduce this.
Comment 3 Julien Nabet 2019-06-08 15:28:26 UTC
I could reproduce this with gtk and kde5 renderings too but not with gen rendering.
=> Updating title
Comment 4 Xisco Faulí 2019-06-11 09:56:38 UTC
I can't reproduce it in

Version: 6.4.0.0.alpha0+
Build ID: ec905d131374f0860bac77c52873eed984b1966f
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

but I do in

Version: 6.4.0.0.alpha0+
Build ID: ec905d131374f0860bac77c52873eed984b1966f
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk2; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded
Comment 5 Xisco Faulí 2019-06-11 10:03:05 UTC
The entry was added in https://cgit.freedesktop.org/libreoffice/core/commit/?id=11669b9cf970d953d41b8dd2c5ce85d6fa7e31ef

@Caolán, I thought you might be interested in this issue...
Comment 6 Caolán McNamara 2019-06-11 15:52:46 UTC
both options area are "grow", which means that are both "shrink" when they don't fit in the available space. They both shrink by the same amount divided between the two, shrinking the little one out of existence. Making the "big" one grow and the "little" one not will make them both visible.
Comment 7 Commit Notification 2019-06-12 12:13:50 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-3":

https://git.libreoffice.org/core/+/07a95dbe5843a2dc3c02daad904d00baa71fa99c%5E%21

Resolves: tdf#125799 only let doc options grow/shrink

It will be available in 6.3.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2019-06-12 12:14:04 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/5580974cea55fc4aceb139cc128d4e9a030fed5b%5E%21

Resolves: tdf#125799 only let doc options grow/shrink

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.