Resolves: tdf#125799 only let doc options grow/shrink

and give the global list of just 1 entry space for 2 to take the bare
look off it, if there end up with more entries here, then let it take
its natural size at that point

Change-Id: Ic1834dc90cdcc061636ad49d69c301c7b570db3e